OLMIS-4986: Added user contact details search endpoint
